Fixes to sidebar on mobile

--- a/source/content/stylesheets/style.css
+++ b/source/content/stylesheets/style.css
@@ -31,11 +31,17 @@ h1, h2{
 
 .brand{
     color: #264653 !important;
-    font-size: 2.8rem !important;
+    font-size: 2.2rem !important;
     font-weight: 700 !important;
 }
 
 .sidebar{
     border-right: 1px solid #dee2e6;
     min-height: 100vh;
+}
+
+@media (min-width: 576px) {
+    .brand{
+        font-size: 2.8rem !important;
+    }
 }
